--- a/Source/Web/Hangman.Web/Web.config
+++ b/Source/Web/Hangman.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Hangman.Web-20170119103720.mdf;Initial Catalog=aspnet-Hangman.Web-20170119103720;Integrated Security=True"
+    <add name="HangmanConnection" connectionString="Data Source=.;Initial Catalog=HangmanDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
