Commented two factor provider

--- a/Source/Data/Hangman.Data/Hangman.Data.csproj
+++ b/Source/Data/Hangman.Data/Hangman.Data.csproj
@@ -67,6 +67,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hangman.Models\Hangman.Models.csproj">
+      <Project>{15b21da5-2250-4663-a318-5ebbfd82ffc1}</Project>
+      <Name>Hangman.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
