--- a/Source/Web/Hangman.Web/Hangman.Web.csproj
+++ b/Source/Web/Hangman.Web/Hangman.Web.csproj
@@ -174,7 +174,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -245,6 +244,16 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\Hangman.Data\Hangman.Data.csproj">
+      <Project>{01ff50b0-3a1b-4cd9-8818-d995c1a457c3}</Project>
+      <Name>Hangman.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Data\Hangman.Models\Hangman.Models.csproj">
+      <Project>{15b21da5-2250-4663-a318-5ebbfd82ffc1}</Project>
+      <Name>Hangman.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
