--- a/Source/Data/Hangman.Data/Hangman.Data.csproj
+++ b/Source/Data/Hangman.Data/Hangman.Data.csproj
@@ -59,10 +59,10 @@
   <ItemGroup>
     <Compile Include="HangmanDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
