--- a/Source/Services/Hangman.Services/Hangman.Services.csproj
+++ b/Source/Services/Hangman.Services/Hangman.Services.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\IGameService.cs" />
     <Compile Include="Contracts\IScoreService.cs" />
     <Compile Include="Contracts\IWordService.cs" />
+    <Compile Include="GameService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScoreService.cs" />
     <Compile Include="WordService.cs" />
