added: form to create a game, statistics to newly created game, method for conversion of the word from db to a word that should be guessed

--- a/Source/Web/Hangman.Web/Hangman.Web.csproj
+++ b/Source/Web/Hangman.Web/Hangman.Web.csproj
@@ -209,8 +209,10 @@
     <Compile Include="Infrastructure\Mapping\IMapFrom.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CategoryViewModel.cs" />
+    <Compile Include="Models\GameCacheModel.cs" />
     <Compile Include="Models\GameCreateViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\StatisticsPerUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -270,6 +272,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Game\Create.cshtml" />
+    <Content Include="Views\Game\Play.cshtml" />
+    <Content Include="Views\Shared\_GameVisualization.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
