--- a/Source/Web/Hangman.Web/Hangman.Web.csproj
+++ b/Source/Web/Hangman.Web/Hangman.Web.csproj
@@ -211,14 +211,21 @@
     <Compile Include="Models\CategoryViewModel.cs" />
     <Compile Include="Models\GameCacheModel.cs" />
     <Compile Include="Models\GameCreateViewModel.cs" />
+    <Compile Include="Models\GamePlayStateModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\StatisticsPerUser.cs" />
+    <Compile Include="Models\StatisticsPlayGameModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\0.jpg" />
+    <Content Include="Content\Images\1.jpg" />
+    <Content Include="Content\Images\2.jpg" />
+    <Content Include="Content\Images\3.jpg" />
+    <Content Include="Content\Images\4.jpg" />
+    <Content Include="Content\Images\5.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
