helper methods in new assembly and constructing ajax request

--- a/Source/Common/Hangman.Common/Hangman.Common.csproj
+++ b/Source/Common/Hangman.Common/Hangman.Common.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HangmanConstants.cs" />
+    <Compile Include="HangmanHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
