--- a/Source/Web/Hangman.Web/Hangman.Web.csproj
+++ b/Source/Web/Hangman.Web/Hangman.Web.csproj
@@ -227,10 +227,9 @@
     <Content Include="Content\Images\3.jpg" />
     <Content Include="Content\Images\4.jpg" />
     <Content Include="Content\Images\5.jpg" />
-    <Content Include="Content\Images\ImageWin.jpg" />
-    <Content Include="Content\Images\ImageLoose.jpg" />
+    <Content Include="Content\Images\ImageWinNotWholeWord.jpg" />
     <Content Include="Content\Images\ImageWinWholeWord.jpg" />
-    <Content Include="Content\Images\ImageLooseWholeWord.jpg" />
+    <Content Include="Content\Images\ImageLoose.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
